# ai-aac

./: .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx  providers.tsx
app/api/speak/: route.ts
app/api/starter-symbols/: route.ts
app/api/suggest/: route.ts
app/api/symbols/: route.ts
components/aac/: ConfirmDialog.tsx  Footer.tsx  MessageBar.tsx  SelectedSymbol.tsx  SymbolCard.tsx  SymbolGrid.tsx  index.ts
hooks/: useSelectedSymbols.ts  useSymbols.ts
lib/: aac-pictograms.json  gemini.ts  pictobert.ts  pictograms.ts  symbolQueries.ts  tag-icon-mapping.json
pictobert/: README.md  pyproject.toml  server.py
scripts/: generate-tag-icons.ts
types/: symbol.ts
